--- a/src/main/webapp/ngboostrap/app/widgets/mainmenu/css/mainmenu.less
+++ b/src/main/webapp/ngboostrap/app/widgets/mainmenu/css/mainmenu.less
@@ -2,6 +2,7 @@
 	.fixed-header & {
 		@media (min-width: @screen-sm-min){
 			.navbar-fixed-top();			
+			border: 1px solid transparent;
 		}
 	}
 }
